Sat Jul 17 14:06:30 UTC 2010  Martin Corino  <mcorino@remedy.nl>

        * protocols/ace/INet/ClientRequestHandler.h:
        * protocols/ace/INet/URLBase.h:
          Some include shuffling to fix an incomplete type warning
          with MSVC.

Sat Jul 17 11:39:30 UTC 2010  Martin Corino  <mcorino@remedy.nl>

        * protocols/ace/INet/inet_ssl.mpb:
          Replaced ace_openssl base project by ssl. Fixes missing
          ACE_SSL lib link errors.

        * protocols/ace/INet/SSL_CallbackManager.cpp:
          Fixed MSVC compile errors.

Sat Jul 17 10:26:30 UTC 2010  Martin Corino  <mcorino@remedy.nl>

        * bin/MakeProjectCreator/config/inetssl.mpb:
        * bin/MakeProjectCreator/config/inet.mpb:
          Added feature project for SSL based parts of INet.
          Setting feature ssl=1 will automatically cause correct
          dependencies for SSL to be generated in INet based projects.

        * protocols/ace/INet/HTTPS_Context.cpp:
        * protocols/ace/INet/HTTPS_Context.h:
        * protocols/ace/INet/HTTPS_Context.inl:
        * protocols/ace/INet/HTTP_SessionBase.cpp:
        * protocols/ace/INet/HTTP_SessionBase.h:
        * protocols/ace/INet/HTTP_SessionBase.inl:
        * protocols/ace/INet/HTTPS_Session.cpp:
        * protocols/ace/INet/HTTPS_SessionFactory.cpp:
        * protocols/ace/INet/HTTPS_SessionFactory.h:
        * protocols/ace/INet/HTTPS_Session.h:
        * protocols/ace/INet/HTTPS_URL.cpp:
        * protocols/ace/INet/HTTPS_URL.h:
        * protocols/ace/INet/HTTPS_URL.inl:
        * protocols/ace/INet/SSL_CallbackManager.cpp:
        * protocols/ace/INet/SSL_CallbackManager.h:
        * protocols/ace/INet/SSL_CallbackManager.inl:
        * protocols/ace/INet/SSL_CertificateCallback.cpp:
        * protocols/ace/INet/SSL_CertificateCallback.h:
        * protocols/ace/INet/SSL_CertificateCallback.inl:
        * protocols/ace/INet/SSL_PasswordCallback.cpp:
        * protocols/ace/INet/SSL_PasswordCallback.h: